[package]
name = "ribis"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.20"
#pgp = "0.14.0"
pgp-lib = "1.0.0"
rand = "0.8.5"
rpassword = "7.3.1"
sequoia-openpgp = "1.21.2"
shellexpand = "3.1.0"
smallvec = "1.13.2"
sqlite = "0.36.1"
tokio = "1.41.0"
yaml-rust2 = "0.9.0"
