[package]
name = "ribis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-std = "1.13.0"
base64 = "0.22.1"
chalk_rs = "1.0.1"
chrono = "0.4.38"
clap = "4.5.20"
pgp = "0.14.0"
pgp_lib = { package = "pgp-lib", version = "1.0.0" }
rand = "0.8.5"
rpassword = "7.3.1"
rusqlite = "0.32.1"
sequoia-openpgp = "1.21.2"
shellexpand = "3.1.0"
smallvec = "1.13.2"
spinoff = "0.8.0"
tar = "0.4.42"
tokio = "1.41.0"
xz2 = "0.1.7"
yaml-rust2 = "0.9.0"
